plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.4'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'team.backend'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

def querydslDir = file("$buildDir/generated/querydsl")

sourceSets {
	main.java.srcDirs += querydslDir
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'mysql:mysql-connector-java:8.0.28'
	implementation 'org.springframework.boot:spring-boot-starter'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0' //swagger 관련 의존성 추가
	implementation 'org.springframework.boot:spring-boot-starter-mail' // 메일 전송 관련 의존성 추가


	//QueryDSL

	implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta' // QueryDSL 핵심 의존성
	annotationProcessor 'com.querydsl:querydsl-apt:5.0.0:jakarta'
	annotationProcessor 'jakarta.annotation:jakarta.annotation-api:2.1.1' // 💡 QueryDSL APT 설정 추가
	annotationProcessor 'jakarta.persistence:jakarta.persistence-api:3.1.0' // 💡 QueryDSL APT 설정 추가

	implementation 'jakarta.persistence:jakarta.persistence-api:3.1.0'


	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	implementation 'com.fasterxml.jackson.core:jackson-databind'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.mariadb.jdbc:mariadb-java-client:3.3.2'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'

	implementation 'org.springframework.boot:spring-boot-starter-security' //spring security 의존성
	implementation 'org.springframework:spring-context'

	// Jackson 명시 (버전 충돌 방지)
	implementation 'com.fasterxml.jackson.core:jackson-core:2.15.2'
	implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.2'
	implementation 'com.fasterxml.jackson.core:jackson-annotations:2.15.2'

	// JWT 관련 추가 필요
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5' // 핵심 API
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'   // 내부 구현체
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5' // JSON 직렬화용

	implementation 'org.json:json:20231013'
}

tasks.named('test') {
	useJUnitPlatform()
}

tasks.withType(JavaCompile).configureEach {
	options.annotationProcessorGeneratedSourcesDirectory = file(querydslDir)
	options.compilerArgs += [
			"-Aquerydsl.generatedSourcesDir=${querydslDir}"
	]
}
